--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -26,7 +26,7 @@ jobs:
       run: docker build -t javigandarillas/birthdayback${{ github.head_ref }} .
 
     - name: Login to Docker Hub (o tu registro de contenedores)
-      run: docker login -u ${{ secrets.LOGIN_SECRET }} -p ${{ secrets.DOCKER_SECRET }}
+      run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_CLAVE }}
 
     - name: Push Docker image
       run: docker push javigandarillas/birthdayback${{ github.head_ref }}
